[gd_scene load_steps=17 format=3 uid="uid://pytpuzzle"]

[ext_resource type="Script" path="res://minigames/pyt/pyt_puzzle/pyt_puzzle.gd" id="1_600gd"]
[ext_resource type="Texture2D" uid="uid://ba0sr43rxvvv2" path="res://minigames/pyt/pyt_puzzle/assets/rght_btm_tri.svg" id="2_w0ehw"]
[ext_resource type="Texture2D" uid="uid://c6g7al4e51w5e" path="res://minigames/pyt/pyt_puzzle/assets/lft_btm_tri.svg" id="3_cwnm8"]
[ext_resource type="Texture2D" uid="uid://c8rt8jhrg1kuq" path="res://minigames/pyt/pyt_puzzle/assets/lft_tp_tri.svg" id="4_m8e43"]
[ext_resource type="Texture2D" uid="uid://b1lsu2jahcrk7" path="res://minigames/pyt/pyt_puzzle/assets/rght_tp_tri.svg" id="5_mj8lj"]
[ext_resource type="Texture2D" uid="uid://dvs1ab87cygha" path="res://minigames/pyt/pyt_puzzle/assets/tri_sqr.svg" id="6_w11hg"]
[ext_resource type="PackedScene" uid="uid://dpmo2cu1ntwfb" path="res://minigames/pyt/pyt_puzzle/movable_shape.tscn" id="7_pewti"]
[ext_resource type="Texture2D" uid="uid://dtjem7amw8iaf" path="res://minigames/pyt/pyt_puzzle/assets/ab_rect.svg" id="8_uwlih"]
[ext_resource type="Texture2D" uid="uid://dellcrmm2ewd7" path="res://minigames/pyt/pyt_puzzle/assets/ab_rect2.svg" id="9_qwgdb"]
[ext_resource type="Texture2D" uid="uid://bdxoli2xcjfix" path="res://minigames/pyt/pyt_puzzle/assets/a_sq.svg" id="10_20wit"]
[ext_resource type="Texture2D" uid="uid://oxif7t720lwc" path="res://minigames/pyt/pyt_puzzle/assets/b_sq.svg" id="11_4pbcs"]
[ext_resource type="Texture2D" uid="uid://dvea0f7b8sk1l" path="res://minigames/pyt/pyt_puzzle/assets/eq.svg" id="12_06e2w"]
[ext_resource type="Texture2D" uid="uid://bo5hacvxkqhv6" path="res://minigames/pyt/pyt_puzzle/assets/neq.svg" id="13_wxddr"]
[ext_resource type="Texture2D" uid="uid://b5sdtw5ipvqob" path="res://minigames/pyt/pyt_puzzle/assets/total.svg" id="14_4e36f"]
[ext_resource type="Texture2D" uid="uid://chf7yj5lukm2u" path="res://minigames/pyt/pyt_puzzle/assets/measures.svg" id="15_y02kq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ara4o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_06e2w")
}, {
"duration": 1.0,
"texture": ExtResource("13_wxddr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PytPuzzle" type="Node2D"]
script = ExtResource("1_600gd")

[node name="TriBtmRght" parent="." instance=ExtResource("7_pewti")]
texture_normal = ExtResource("2_w0ehw")

[node name="TriBtmLft" parent="." instance=ExtResource("7_pewti")]
texture_normal = ExtResource("3_cwnm8")

[node name="TriTpRght" parent="." instance=ExtResource("7_pewti")]
texture_normal = ExtResource("5_mj8lj")

[node name="TriTpLft" parent="." instance=ExtResource("7_pewti")]
texture_normal = ExtResource("4_m8e43")

[node name="TriSquare" type="Sprite2D" parent="."]
texture = ExtResource("6_w11hg")
centered = false

[node name="RectTp" parent="." instance=ExtResource("7_pewti")]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 151.0
texture_normal = ExtResource("8_uwlih")

[node name="RectBtm" parent="." instance=ExtResource("7_pewti")]
texture_normal = ExtResource("9_qwgdb")

[node name="SqrA" type="Sprite2D" parent="."]
texture = ExtResource("10_20wit")
centered = false

[node name="SqrB" type="Sprite2D" parent="."]
texture = ExtResource("11_4pbcs")
centered = false

[node name="Equation1" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ara4o")

[node name="Equation2" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ara4o")

[node name="Equation3" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ara4o")

[node name="Framework" type="Sprite2D" parent="."]
texture = ExtResource("14_4e36f")

[node name="Measures" type="Sprite2D" parent="."]
texture = ExtResource("15_y02kq")
